# upload-django

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
database/: db.sqlite3
send/: asgi.py  settings.py  urls.py  wsgi.py
send.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
upload/: form.py  models.py  tasks.py  urls.py  validators.py  views.py
upload/management/commands/: expire_events.py
upload/migrations/: 0001_initial.py  0002_auto_20200525_1027.py
upload/templates/: base.html
upload/templates/upload/: created.html  delete.html  upload_detail.html  upload_form.html
